@@ -350,7 +350,9 @@ class PMRenderCategoryView(RenderCategoryView):
 
     def templateItems(self):
         '''Check if there are item templates defined or not.'''
-        return bool(self.cfg.getItemTemplates(as_brains=True, onlyActive=True))
+        return bool(self.cfg.getItemTemplates(as_brains=True,
+                                              onlyActive=True,
+                                              filtered=True))
 
 
 class MeetingFacetedTableView(IDFacetedTableView):
